# pygvas

./: .gitignore  CONTRIBUTING.MD  GVAS File Schema Dump.json  HOWTO.md  LICENSE  README.md  check_gvas_file_format.py  detect_gvas_format.py  devharness.py  do_unit_tests.bat  do_utility_tests.bat  do_utility_tests.py  documentation generation prompts.txt  gvas2json.py  gvas_file_schema.json  json2gvas.py  pyproject.toml  requirements.txt  test_utilities.py
docs/: array_property.md  delegate_property.md  enum_property.md  field_path_property.md  gvas_file.md  gvas_overview.md  gvas_utils.md  int_property.md  map_property.md  name_property.md  numerical_properties.md  object_property.md  property_base.md  set_property.md  standard_structs.md  standard_types.md  str_property.md  struct_property.md  text_property.md  utilities.md
documentation/: array_property.md  delegate_property.md  engine_tools.md  enum_property.md  error.md  field_path_property.md  gvas_file.md  gvas_types.md  gvas_utils.md  map_property.md  name_property.md  numerical_property.md  object_property.md  property_base.md  set_property.md  standard_types.md  str_property.md  struct_property.md  text_property.md
gvas/: __init__.py  custom_versions.py  engine_tools.py  engine_versions.py  error.py  foo.py  game_version.py  gvas2json.py  gvas_file.md  gvas_file.py  gvas_types.py  gvas_utils.py  types.py  utils.py
pygvas/: __init__.py  engine_tools.py  error.py  gvas2json.py  gvas_file.py  gvas_utils.py  json2gvas.py
tests/: README.md  __init__.py  test_gvas.py  test_gvas_examples.py
(+83 files in other folders)
